added a new image and updated the about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img src="/img/me.png" alt="">
+        <p>This site was created by Okechukwu Emordi. It uses data from mapbox.com and weather unlock</p>
+        <img src="/img/me.jpg" alt="">
     </div>
 
     {{>footer}}
