--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Okechukwu Emordi. It uses data from mapbox.com and weather unlock</p>
-        <img src="/img/me.jpg" alt="">
+        <img src="/img/image.JPG" alt="">
     </div>
 
     {{>footer}}
